@@ -1467,7 +1467,7 @@ sub version_check ($)
     return 1
 	if ($required[4] ne '' && $required[4] ne $version[4]);
 
-    return 0 >= version_compare @version, @required;
+    return 0 > version_compare @version, @required;
 }
 
 # $BOOL
