@@ -355,6 +355,7 @@ version2.test \
 version3.test \
 version4.test \
 version5.test \
+version6.test \
 vpath.test \
 vtexi.test \
 vtexi2.test \
