@@ -1,3 +1,9 @@
+2002-04-13  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* tests/version6.test: New file.
+	* tests/Makefile.am (TESTS): Add tests/version6.test.
+	* automake.in (version_check): Return 0 on equality.
+
 2002-04-11  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* configure.in: Bump version to 1.6.1a.
